# airstrike-amiga

./: .gitignore  Airstrike.info  CMakeLists.txt  Readme.md  airstrike  airstrike-amiga.readme  airstrikerc
cmake/: FindSDL.cmake
data/: notes.txt
src/: Makefile  airstrike.c  compila.sh  config.c  config.h  control.c  mech.c  sprite_types.h  winds.c
src/sprite/: animation.c  dirty.c  dirty.h  global.c  sdlutils.c  sprite.c  sprite.h
src/sprite_types/: airballoon.c  biplane.c  bird.c  blueplane.c  bomb.c  bonusmachine.c  bouncer.c  bullet.c  cannon.c  cloud.c  dust.c  energymeter.c  explosions.c  hangar.c  mark.c  message.c  missile.c  parachute.c  puff.c
src/support/: console.c  maths.c  maths.h  names.c  text.c
